# Win32UI

./: .gitignore  CMakeLists.txt  README.md
01-FirstWinGUI/: CMakeLists.txt  FirstWinGUI.c  FirstWinGUI.h  MainFrame.c  MainFrame.h
02-DrawText/: CMakeLists.txt  main.c
03-KeyboardMouse/: CMakeLists.txt  main.c  main.h
04-Resource/: Brahma.txt  CMakeLists.txt  DialogBoxIndirectParamExample.md  Resource.h  Resource.rc  main.c  main.h
98-GDIPlus_LinearGradientBrush/: CMakeLists.txt  main.c  main.h  uiToolkit.c  uiToolkit.h
99-Tools/: CMakeLists.txt  CursorGen.c  CursorGen.h  KillProcess.c  KillProcess.h
Document/: FirstWinGUI.md  SUMMARY.md
